{card.js} {profile.js} address render/cropping issues, relable divs to prevent conflicting css sheets

--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -26,10 +26,13 @@
     background-color: white;
     flex: 1;
     width: 200px;
-    width: 150;
+    height: 200px;
     padding-top: 10px;
     padding-right: 10px;
     padding-left: 10px;
+    object-fit:cover;
+    background-size:cover;
+    background-position:center;
 }
 .itemInfo {
     display: flex;
