--- a/client/src/styles/Details.css
+++ b/client/src/styles/Details.css
@@ -1,4 +1,15 @@
-  .visible {
+ .detailsPage{
+   padding-right: 12px;
+   padding-left: 12px;
+ }
+ 
+
+ .detailsPhoto{
+   margin-top: 20px;
+   margin-bottom: 20px;
+ }
+ 
+ .visible {
     color: black;
   }
   .invisible{
@@ -72,13 +83,6 @@
     border: 0;
   }
   
-.bTn{
-  border: none;
-  color:white;
-  background-color: rgb(32,137,240);
-  /* opacity: 100% !important; */
-  margin: 2px;
-}
 
 .requestButton {
   border: none;
@@ -107,4 +111,42 @@
   width: 100px;
   color: white;
   border-radius: 10px;
+}
+
+
+.uiDisplayButtons {
+  display: flex;
+  flex-direction: row;
+  border: none;
+  margin: 2px;
+  border-radius: 20px;
+  width: 100%;
+
+}
+
+
+
+.adminUIButtons{
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+.backBtn{
+  background-color: rgb(32,137,240);
+  border-radius: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color:white;
+}
+
+.adminBtn{
+  background-color: rgb(32,137,240);
+  border-radius: 20px;
+  margin: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color:white;
+  
 }
